--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@ title: Updates
 		<h2><a href="{{ post.url | relative_url }}">{{ post.title }}</a></h2>
 		<div class="date-format" style="margin-bottom:15px">{{ post.date | date: "%B %-d, %Y" }}</div>
 		
-		{{ post.excerpt }}
-		
-		<a href="{{ post.url | relative_url }}">more...</a>
+		<div style="margin-left:15px; margin-right:15px">
+			{{ post.excerpt }}		
+			<a href="{{ post.url | relative_url }}">more...</a>
+		</div>
 	</div>
 </div>
 {% endfor %}
