--- a/index.html
+++ b/index.html
@@ -16,3 +16,8 @@ title: Updates
 	</div>
 </div>
 {% endfor %}
+
+<script>
+var titles = document.getElementsByTagName("h1");
+titles[0].style.textAlign = "center";
+</script>
