--- a/index.html
+++ b/index.html
@@ -20,4 +20,5 @@ title: Updates
 <script>
 var titles = document.getElementsByTagName("h1");
 titles[0].style.textAlign = "center";
+titles[0].style.width = "100%";
 </script>
