--- a/index.html
+++ b/index.html
@@ -21,4 +21,5 @@ title: Updates
 var titles = document.getElementsByTagName("h1");
 titles[0].style.textAlign = "center";
 titles[0].style.width = "100%";
+document.getElementById('postlist').scrollTo(0, document.getElementById('postlist').scrollHeight);
 </script>
